# actix-web-nextjs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: error.rs  lib.rs  spa.rs  spa_service.rs  utils.rs
