[package]
name = "actix-web-nextjs"
description = "Actix Web service for hosting statically exported Next.js apps"
version = "0.2.6"
edition = "2021"
authors = ["ccmvn <info@ccmvn.co>"]

license = "MIT/Apache-2.0"
repository = "https://github.com/ccmvn/actix-web-nextjs"
homepage = "https://github.com/ccmvn/actix-web-nextjs"

exclude = [
    "fixtures/*",
]

[dependencies]
actix-files = { version = "0.6.6", default-features = false }
actix-service = { version = "2.0.2", default-features = false }
actix-web = { version = "4.8.0", default-features = false, features = ["macros"] }
glob = "0.3.1"
path-tree = "0.8.1"
regex = { version = "1.10.6", default-features = false, features = ["unicode-perl"] }
once_cell = "1.19.0"
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
anyhow = "1.0.86"
thiserror = "1.0.63"

[features]
default = ["wildcards"]
wildcards = []
